Clear out files that were copied to gh-pages.

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This area is a (WIP) attempt to implement a SPARQLy GUIs recipe,
-using GitHub (as opposed to TWiki).
+using GitHub (as opposed to TWiki).  The Real Files are over in
+the gh-pages branch.
